tests/rosetta/out/Fortran/averages-pythagorean-means.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program averages_pythagorean_means
  implicit none
    real :: result
    integer :: i
    real :: low
    integer :: high
      integer :: mid
    integer :: sum
    real :: sumRecip
    real :: prod
    integer :: count
    integer :: a
    integer :: g
    integer :: h
      integer :: f
    character(len=100) :: s0
    character(len=100) :: s1
    character(len=100) :: s2
    character(len=100) :: s3
  call main()
  
  contains
  recursive real function powf(base,exp) result(res)
    real, intent(in) :: base
    integer, intent(in) :: exp
    result = 1.0
    i = 0
    do while ((i < exp))
      result = (result * base)
      i = (i + 1)
    end do
    res = result
    return
  end function powf
  recursive real function nthRoot(x,n) result(res)
    real, intent(in) :: x
    integer, intent(in) :: n
    low = 0.0
    high = x
    i = 0
    do while ((i < 60))
      mid = (((low + high)) / 2.0)
      if ((powf(mid,n) > x)) then
        high = mid
      else
        low = mid
      end if
      i = (i + 1)
    end do
    res = low
    return
  end function nthRoot
  recursive subroutine main()
    sum = 0.0
    sumRecip = 0.0
    prod = 1.0
    n = 1
    do while ((n <= 10))
      f = real(n)
      sum = (sum + f)
      sumRecip = ((sumRecip + 1.0) / f)
      prod = (prod * f)
      n = (n + 1)
    end do
    count = 10.0
    a = (sum / count)
    g = nthRoot(prod,10)
    h = (count / sumRecip)
    write(s0,'(G0)') a
    write(s1,'(G0)') g
    write(s2,'(G0)') h
    print *, trim(trim(trim(trim('A: ' // s0) // ' G: ') // s1) // ' H: ') // s2
    write(s3,'(G0)') (((a >= g) .and. g) >= h)
    print *, 'A >= G >= H: ' // s3
  end subroutine main
end program averages_pythagorean_means
